# lesli

./: .gitignore  CMakeLists.txt  lesli.cpp
src/lesli/: lesli.cpp  tmp.txt  tmp2.txt  trie.hpp
tests/: minunit.h  util_test.cpp
